--- a/src/preprocessing and visualization/session_2/code/basic.ipynb
+++ b/src/preprocessing and visualization/session_2/code/basic.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "525da706",
    "metadata": {},
    "outputs": [],
@@ -528,6 +528,28 @@
     "condition = v5>= 4\n",
     "new_arr = np.where(condition, -1,v5)\n",
     "print(new_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2111470a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(array([1, 2, 3, 4, 5]), array([2, 3, 0, 5, 3]))\n"
+     ]
+    }
+   ],
+   "source": [
+    "v1 = np.array([1,2,3,4,5])\n",
+    "v2 = np.array([2,3,0,5,3])\n",
+    "\n",
+    "v3 = v1, v2\n",
+    "print(v3)"
    ]
   }
  ],
