--- a/src/preprocessing and visualization/session_1/assignment/np_task.ipynb
+++ b/src/preprocessing and visualization/session_1/assignment/np_task.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "39e7161c",
    "metadata": {},
    "outputs": [],
@@ -34,8 +34,21 @@
     "    - 'full': Array filled with a specified 'value'.\n",
     "    - 'identity': A square identity matrix of size 'shape'.\n",
     "    \"\"\"\n",
-    "    # TODO: Students implement logic here\n",
-    "    pass"
+    "    if mode == \"zeros\":\n",
+    "        return np.zeros(shape)\n",
+    "    \n",
+    "    elif mode == \"ones\":\n",
+    "        return np.ones(shape)\n",
+    "    \n",
+    "    elif mode == \"full\":\n",
+    "        return np.full((shape), value)\n",
+    "    \n",
+    "    elif mode == \"identity\":\n",
+    "        return np.identity(value)\n",
+    "    \n",
+    "    else:\n",
+    "        return \"Please choose a mode from the listed 4\"\n",
+    "    "
    ]
   },
   {
@@ -50,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "18fa6c5f",
    "metadata": {},
    "outputs": [],
@@ -67,18 +80,18 @@
     "        # Convert inputs to ndarray to ensure they are processed as Tensors \n",
     "        # arr = np.array(data1)\n",
     "\n",
-    "        arr1 = # TODO\n",
-    "        arr2 = # TODO\n",
+    "        arr1 = np.array(data1)\n",
+    "        arr2 = np.array(data2)\n",
     "\n",
     "        # Rule: Change the shape of arr1 to new_shape \n",
     "        # Common usage: turning a vector (1D) into a matrix (2D)  by using reshape function \n",
-    "        reshaped_arr1 = # TODO\n",
+    "        reshaped_arr1 = arr1.reshape(new_shape)\n",
     "\n",
     "        # Rule: Vertical Stacking (vstack) \n",
     "        # Requirement: Both matrices must have the same number of columns\n",
-    "        combined_dataset = # TODO\n",
+    "        combined_dataset = np.vstack((reshaped_arr1, arr2))\n",
     "\n",
-    "        return # TODO\n",
+    "        return combined_dataset\n",
     "\n",
     "    except ValueError as e:\n",
     "        # Handle cases where reshape size doesn't match or stack columns don't match\n",
@@ -97,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e8448e11",
    "metadata": {},
    "outputs": [],
@@ -110,14 +123,14 @@
     "    and replaces them with a new value.\n",
     "    \"\"\"\n",
     "    # 1. Convert input to a numpy array (ndarray)\n",
-    "    arr = # TODO\n",
+    "    arr = np.array(arr)\n",
     "    # 2. Define the condition: elementwise comparison \n",
     "    # This creates a Boolean numpy array \n",
-    "    condition = # TODO\n",
+    "    condition = (arr >= threshold)\n",
     "    \n",
     "    # 3. Apply Modification using np.where() \n",
     "    # np.where(condition, value_if_true, value_if_false)\n",
-    "    modified_arr = #TODO\n",
+    "    modified_arr = np.where(condition, replacement_value, arr)\n",
     "    \n",
     "    return modified_arr"
    ]
@@ -132,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "73cfc2d3",
    "metadata": {},
    "outputs": [
@@ -141,20 +154,9 @@
      "output_type": "stream",
      "text": [
       "[[ 1  2  3]\n",
-      " [ 4  5  6]\n",
-      " [ 7  8  9]\n",
-      " [10 11 12]]\n"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
-      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
-      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
-      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+      " [ 4 -1 -1]\n",
+      " [-1 -1 -1]\n",
+      " [-1 -1 -1]]\n"
      ]
     }
    ],
@@ -167,14 +169,17 @@
     "            [10, 11, 12]]\n",
     "\n",
     "# Reshape A to 2x3 and stack with B\n",
-    "final_report = apply_threshold(branch_a, branch_b, (2, 3))\n",
+    "reshaped_branch_a = np.reshape(branch_a, (2,3))\n",
+    "stacked = np.vstack((reshaped_branch_a, branch_b))\n",
+    "\n",
+    "final_report = apply_threshold(stacked, 5)\n",
     "print(final_report)\n",
     "# Resulting shape: (4, 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "fa2cf838",
    "metadata": {},
    "outputs": [
@@ -184,7 +189,7 @@
        "array([  1, -20, -20])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,19 +198,11 @@
     "v= np.array([1,2,3])\n",
     "apply_threshold(v,2,-20)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b2662174",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": ".env",
    "language": "python",
    "name": "python3"
   },
@@ -219,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
