--- a/src/python/session_5/assignments/Final project.ipynb
+++ b/src/python/session_5/assignments/Final project.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -143,11 +143,9 @@
    "source": [
     "class BankAccount:\n",
     "    def __init__(self, initial_balance):\n",
-    "        \"\"\"Initialize the account with a starting balance.\"\"\"\n",
     "        self.balance = initial_balance\n",
     "\n",
     "    def deposit(self, amount):\n",
-    "        \"\"\"Add money to the account with validation.\"\"\"\n",
     "        if amount > 0:\n",
     "            self.balance += amount\n",
     "            print(f\"Deposited {amount}. New balance: {self.balance}\")\n",
@@ -155,7 +153,6 @@
     "            print(\"Error: Deposit amount must be positive.\")\n",
     "\n",
     "    def withdraw(self, amount):\n",
-    "        \"\"\"Remove money from the account with validation.\"\"\"\n",
     "        if amount <= 0:\n",
     "            print(\"Error: Withdrawal amount must be positive.\")\n",
     "        elif amount > self.balance:\n",
@@ -165,7 +162,6 @@
     "            print(f\"Withdrew {amount}. New balance: {self.balance}\")\n",
     "\n",
     "    def check_balance(self):\n",
-    "        \"\"\"Display the current balance.\"\"\"\n",
     "        print(f\"Current balance: {self.balance}\")\n",
     "\n",
     "\n",
@@ -324,7 +320,7 @@
     "    my_calc = Calculator()\n",
     "    \n",
     "    while True:\n",
-    "        print(\"\\n--- OOP Calculator ---\")\n",
+    "        print(\"\\n---  Calculator ---\")\n",
     "        print(\"1. Add\\n2. Subtract\\n3. Multiply\\n4. Divide\\n5. Exit\")\n",
     "        \n",
     "        choice = input(\"Choose an operation (1-5): \")\n",
